<resources>
    <string name="app_name">Magento Demo</string>
    <string name="title_activity_body">LUMA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_whats_new">"What\'s New</string>
    <string name="menu_women">Women</string>
    <string name="menu_men">Men</string>
    <string name="menu_gear">Gear</string>
    <string name="menu_training">Training</string>
    <string name="menu_sale">Sale</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="token_default_value">non</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
