<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_whats_new"
            android:icon="@drawable/ic_menu_whats_new"
            android:title="@string/menu_whats_new" />
        <item
            android:id="@+id/nav_women"
            android:icon="@drawable/ic_menu_women"
            android:title="@string/menu_women" />
        <item
            android:id="@+id/nav_men"
            android:icon="@drawable/ic_menu_men"
            android:title="@string/menu_men" />
        <item
            android:id="@+id/nav_gears"
            android:icon="@drawable/ic_menu_gear"
            android:title="@string/menu_gear" />
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_menu_training"
            android:title="@string/menu_training" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/ic_menu_sale"
            android:title="@string/menu_sale" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
